# QTunes

./: CMakeLists.txt  Main.qml  README.md  getfolder.cpp  getfolder.h  main.cpp  mediaplayer.cpp  mediaplayer.h  sqlconnection.cpp  sqlconnection.h
